# sage

./: .dockerignore  .env.example  .gitignore  Dockerfile  Procfile  README.md  api.py  pyproject.toml  requirements.txt  run.bat  run.sh  tui.py
.github/workflows/: ci.yml
config/: models.json
demo/: architecture.html
docs/: ARCHITECTURE.md  DEMO_GUIDE.md  FEATURES.md
docs/adr/: 0001-four-dimensional-memory-scoring.md  0002-one-directional-gated-promotion.md  0003-agent-decomposition-uses-injection.md  (+3 more)
frontend/: README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
knowledge/: alibaba-cloud-deployment.md  deployment-patterns.md  ecs-instance-management.md  monitoring-and-alerts.md  node deployment  security-groups.md  vpc-networking.md
metrics/: counterfactuals.jsonl  eval_history.jsonl
scripts/: release_check.py
tests/: conftest.py  test_actr_and_tags.py  test_agent.py  test_agent_loop.py  test_agent_loop_gaps.py  test_agent_loop_read_only.py  test_api.py  test_api_contract.py  test_demo_integrity.py  test_edge_cases.py  test_embeddings.py  test_evaluator.py  test_features.py  test_jobs.py  test_learning_loop.py  test_live_findings_regressions.py  test_mcp_client.py  test_mcp_client_extended.py  test_memory.py  test_memory_system.py  test_model_caller.py  test_new_modules.py  test_persistence.py  test_prompt_blocks.py  test_rate_limiter.py  test_reflection.py  test_reflection_counterfactual.py  test_retrieval.py  test_run.py  test_security.py  test_security_gating.py  test_tui_visualize_architecture.py
(+56 files in other folders)
