[project]
name = "sage"
version = "0.2.0"
requires-python = ">=3.10"
description = "Self-Improving Agent with Cognitive Memory"
dependencies = [
    "httpx>=0.27.0",
    "json5>=0.9.0",
    "numpy>=1.24.0",
    "openai>=1.0.0",
    "pydantic>=2.0",
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sage"]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=5.0",
    "ruff>=0.15.21",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"
markers = [
    "live: explicitly opted-in tests that may call external services",
]

[tool.coverage.run]
source = ["src/sage"]
branch = true

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "if __name__ == .__main__.",
    "pragma: no cover",
    "logger.debug",
]
